tests/testcases/errors/BCE0063-8.boo
"""
BCE0063-8.boo(8,5): BCE0063: No enclosing loop out of which to break or continue.
"""
i = 0
while i < 3:
	pass
then:
	continue
